@@ -451,5 +451,17 @@ The object is only destroyed if all the references to the object are released, t
         </remarks>
       </Docs>
     </Member>
+    <Member MemberName="Dispose">
+      <MemberSignature Language="C#" Value="public override void Dispose ();" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Disposes the object's resources.</summary>
+        <remarks />
+      </Docs>
+    </Member>
   </Members>
 </Type>
