@@ -72,7 +72,7 @@ namespace GLib {
 			return false;
 		}
 
-		public void Dispose ()
+		public virtual void Dispose ()
 		{
 			if (disposed)
 				return;
