@@ -65,11 +65,15 @@
 		[DllImport("libgtk-win32-2.0-0.dll")]
 		private static extern void gtk_object_destroy (IntPtr raw);
 
-		public virtual void Destroy ()
+		public override void Dispose ()
 		{
 			Destroyed -= NativeDestroyHandler;
+			base.Dispose ();
+		}
+
+		public virtual void Destroy ()
+		{
 			gtk_object_destroy (Handle);
-			Dispose ();
 		}
 
 		public bool IsFloating {
