@@ -1,5 +1,10 @@
 2005-05-11  Mike Kestner  <mkestner@novell.com>
 
+	* glib/Object.cs : mark Dispose virtual.
+	* gtk/Object.cs : release the Destroy handler in Dispose.
+
+2005-05-11  Mike Kestner  <mkestner@novell.com>
+
 	* configure.in.in : s/-g/-debug
 
 2005-05-11  Mike Kestner  <mkestner@novell.com>
